[package]
name = "debug-msl"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.windows]
version = "0.59"
features = [
    "Win32_Globalization",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
